<resources>
    <string name="app_name">MOV</string>
    <string name="skip">lewati perkenalan</string>
    <string name="next">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\n film sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\n update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan E-Wallet untuk\n transaksi tiket nonton</string>
    <string name="memulai">Memulai</string>
    <string name="new_akun">Daftar Akun Baru</string>
    <string name="login">Masuk Akun</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="daftar">Daftar</string>
    <string name="sign_up">Sign Up</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="fardan">Fardan Alghipari</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="simpan_dan_lanjutkan">Simpan dan lanjutkan</string>
    <string name="walet">IDR 0</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="judul">Avengers: Infinity War</string>
    <string name="genre">Action,Sci-fi,Kids</string>
    <string name="storyboard">Storyboard</string>
    <string name="movie_desc">The Avengers must stop Thanos, an intergalactic\n warlord, from getting his hands on all the infinity\n stones. However, Thanos is prepared to go to any\n lengths to carry out his insane plan.</string>
    <string name="who_played">Who Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="rate">9.7</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="beli_tiket">Beli tiket</string>
    <string name="avengers_infinity_war">Avengers: Infinity War</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="checkout">Checkout</string>
    <string name="bayar">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="seat_no_c1">Seat No.C1</string>
    <string name="seat">Seat No.C2</string>
    <string name="total_harus_bayar">Total Harus Bayar</string>
    <string name="total">Total Balance</string>
    <string name="save">Save</string>
    <string name="edit">Edit Profile</string>
    <string name="wallet">My Wallet</string>
    <string name="saldo">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">My History</string>
    <string name="_200_movie">200 Movie</string>
    <string name="_7">7</string>
    <string name="idr_70_000">IDR 70.000</string>
    <string name="tiket_telah_berhasil_dibeli_ndan_selamat_menikmati_film">Tiket telah berhasil dibeli dan\n selamat menikmati film</string>
    <string name="happy_watching">Happy Watching !!</string>
    <string name="lihat_tiket">lihat tiket</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bekasi_cyber_park_chinema_3">Bekasi Cyber Park, Chinema 3  </string>
    <string name="_17_aug_10_am">17 AUG, 10 AM</string>
    <string name="quick_print">Quick Print</string>
    <string name="my_wallet">My Wallet</string>
    <string name="change_language">Change Language</string>
    <string name="help">Help</string>
    <string name="total_balance">Total Balance</string>
    <string name="top_up_saldo">Top Up Saldo</string>
    <string name="avengers_returns">Avengers Returns</string>
    <string name="sabtu_12_jan_2020">Sabtu 12 Jan, 2020</string>
    <string name="idr_22_000">- IDR 22.000</string>
    <string name="you_got_it">You got it!</string>
    <string name="e_wallet_telah_berhasil_nuntuk_diperbarui">E-Wallet telah berhasil \nuntuk diperbarui</string>
    <string name="lihat_wallet">lihat wallet</string>

</resources>
